test-site/test-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test
  labels:
    k8s-app: test
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: test
    spec:
      containers:
      - name: test
        image: nginx:stable
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 20Mi
        volumeMounts:
          - name: test-index
            mountPath: /usr/share/nginx/html
      volumes:
        - name: test-index
          configMap:
            name: test-index
