test-site/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: default
  labels:
    k8s-app: test
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    k8s-app: test
